--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -11,6 +11,9 @@
 \newcommand{\important}[1]{\textbf{\mbox{#1}}}
 \newcommand{\importanthref}[2]{\myhref{#1}{\textbf{\mbox{#1}}}}
 
+\newcommand{\AWS}{\myhref{https://aws.amazon.com/}{Amazon Web Services (AWS)}}
+\newcommand{\Clariteia}{\myhref{https://www.clariteia.com/}{Clariteia}}
+\newcommand{\Minos}{\myhref{https://github.com/minos-framework/minos-python}{Minos Framework}}
 \newcommand{\Unlimiteck}{\myhref{https://unlimiteck.com/}{Unlimiteck Company Builder}}
 \newcommand{\UNIBO}{\myhref{https://www.unibo.it/en}{Università di Bologna}}
 \newcommand{\UVa}{\myhref{http://www.uva.es}{University of Valladolid}}
@@ -23,12 +26,12 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{Software Engineering | Statistics | RPA | Combinatorial Optimization}
+\rhead{Software Engineering | Statistics}
 \lhead{Sergio García Prado}
 
 \begin{document}
 
-  \header{Sergio}{GarcíaPrado}{Software Engineering | Statistics | RPA | Combinatorial Optimization}
+  \header{Sergio}{GarcíaPrado}{Software Engineering | Statistics}
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -39,7 +42,7 @@
     \vspace{-1.5em}
     \begin{center}
       \renewcommand{\arraystretch}{1.5}
-      \begin{tabular}{ p{16em} p{17em} p{16em} }
+      \begin{tabular}{ p{18em} p{19em} p{18em} }
         \myhref{https://garciparedes.me}{\faHome\quad Website: garciparedes.me}
         &
         \myhref{mailto:sergio@garciparedes.me}{\faEnvelope\quad Email: sergio@garciparedes.me}
@@ -65,7 +68,7 @@
 
   \section{summary}
 
-  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm especially curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}. One of my biggest hobbies is \textbf{Competitive Programming}, which I try to practice as much as possible.
+  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. 
 
 %-------------------------------------------------------------------------------
 
@@ -78,16 +81,26 @@
     \begin{entrylist}
 
       \entry
-      {2021/04 -- present}
-      {Software Engineer}
-      {Clariteia}
+      {2022/07 -- present}
+      {Software Development Engineer}
+      {\AWS}
       {
         \begin{itemize}
-          \item Loading ...
+          \item Team: AWS Automotive
+          \item Loading...
         \end{itemize}
       }
 
-      \\
+      \entry
+      {2021/04 -- 2022/06}
+      {Software Engineer}
+      {\Clariteia}
+      {
+        \begin{itemize}
+          \item Build a Microservices Framework, heavily inspired by the Domain-Driven Design ideas, known as the \Minos.
+        \end{itemize}
+      }
+
       \entry
       {2018/06 -- 2021/04}
       {Software Engineer}
@@ -111,7 +124,6 @@
         \end{itemize}
       }
 
-      \\
       \entry
       {2018/03 -- 2018/08}
       {Research Assistant Intern}
@@ -122,7 +134,6 @@
         \end{itemize}
       }
 
-      \\
       \entry
       {2016/06 -- 2016/08}
       {Software Engineer Intern}
@@ -159,7 +170,6 @@
     \end{itemize}
   }
 
-  \\
   \entry
   {2019}
   {\myhref{http://ems.unibo.it/en/}{Erasmus+, Statistics}, 28/30}
@@ -172,7 +182,6 @@
     \end{itemize}
   }
 
-  \\
   \entry
   {2013 -- 2017}
   {\myhref{https://www.inf.uva.es/}{BSc. Computer Engineering, Computation}, 7.885/10.0}
@@ -215,7 +224,6 @@
   \section{projects}
     
     \begin{itemize}
-      \item \textbf{grafo}: High performance network modeling and analysis (starting...) - Rust
       \item \textbf{\helpacket}: Open source and collaborative platform against COVID-20 (discontinued) - Django + Vue.js
       \item \textbf{\jinete} High Performance solving suite for the Pickup and Delivery Problem (part of FDP) - Python
       \item \textbf{\ngkatex}: \TeX\ math expressions processing on browsers boosted by KaTeX (1K/week downloads) - Angular
