* Remove 'Loading...' line.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -86,8 +86,7 @@
       {\AWS}
       {
         \begin{itemize}
-          \item Team: AWS Automotive
-          \item Loading...
+          \item Team: AWS - Industry Products - Automotive
         \end{itemize}
       }
 
