--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -68,7 +68,7 @@
 
   \section{summary}
 
-  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. 
+  I am a double bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} for the University of Valladolid, in Spain. I love solving complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. 
 
 %-------------------------------------------------------------------------------
 
@@ -82,11 +82,24 @@
 
       \entry
       {2022/07 -- present}
-      {Software Development Engineer}
+      {Software Development Engineer II}
+      {\AWS}
+      {
+        \begin{itemize}
+          \item Team: AWS - Auto \& Industrial Solutions
+        \end{itemize}
+      }
+
+      \entry
+      {}
+      {Software Development Engineer I}
       {\AWS}
       {
         \begin{itemize}
           \item Team: AWS - Industry Products - Automotive
+          \item Build greenfield AWS service for automotive customers using serverless architecture (Lambda, Step Functions, DynamoDB, S3, ECS, etc.).
+          \item Develop full-stack solution with Kotlin, Python and TypeScript languages, and AWS CDK for Infrastructure as Code
+        \item Deliver end-to-end service from concept to implementation, designed for automotive industry use cases at scale.
         \end{itemize}
       }
 
