Minor grammar improvements

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -68,7 +68,7 @@
 
   \section{summary}
 
-  I am a double bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} for the University of Valladolid, in Spain. I love solving complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. 
+  I am a double bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love solving complex algorithmic problems, especially those related to \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. 
 
 %-------------------------------------------------------------------------------
 
