Add months on study 'education' section and reclassify 'Unlimiteck' experience as DS

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -115,7 +115,7 @@
 
       \entry
       {2018/06 -- 2021/04}
-      {Software Engineer}
+      {Data Scientist}
       {\Unlimiteck}
       {
         \begin{itemize}
@@ -128,7 +128,7 @@
 
       \entry
       {}
-      {Software Engineer Intern}
+      {Data Scientist Intern}
       {}
       {
         \begin{itemize}
@@ -169,7 +169,7 @@
 \begin{entrylist}
 
   \entry
-  {2017 -- 2020}
+  {2017/09 -- 2020/09}
   {\myhref{http://www.eio.uva.es/}{BSc. Statistics}, 7.925/10.0}
   {\UVa}
   {
@@ -183,7 +183,7 @@
   }
 
   \entry
-  {2019}
+  {2019/01 -- 2019/07}
   {\myhref{http://ems.unibo.it/en/}{Erasmus+, Statistics}, 28/30}
   {\UNIBO}
   {
@@ -195,7 +195,7 @@
   }
 
   \entry
-  {2013 -- 2017}
+  {2013/09 -- 2017/07}
   {\myhref{https://www.inf.uva.es/}{BSc. Computer Engineering, Computation}, 7.885/10.0}
   {\UVa}
   {
